testsuite/poke.pkl/bconc-diag-2.pk
/* { dg-do compile } */

var a = 3#B /* { dg-error "invalid operand.*\n.*expected integral" } */
          ::: 100;
